# rhetorical_aspect_embeddings

./: .gitignore  README.md  pyproject.toml  train.py  visualize.py  visualize_glove.py
data/cf-sentence-dataset/: convert.py
data/csabstruct/: convert.py
data/pubmedrct/: convert.py
modules/: args.py  distances.py  loss_utils.py  models.py  reducers.py  samplers.py  utils.py
