[tool.poetry]
name = "rhetorical-aspect-embeddings"
version = "0.1.0"
description = ""
authors = ["Kaito Sugimoto <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.11.3"
torch = "^1.9.1"
accelerate = "^0.5.1"
datasets = "^1.13.3"
pandas = "^1.3.3"
sklearn = "^0.0"
matplotlib = "^3.4.3"
scikit-learn = "^1.0"
faiss-gpu = "^1.7.1"
nltk = "^3.6.5"
tensorflow-hub = "^0.12.0"
tensorflow = "^2.6.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
